--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -288,8 +288,8 @@
                 {% for material in recent_materials %}
                     <tr>
                         <td>{{ material.name }}</td>
-                        <!-- <td>{{ material.date.strftime('%d/%m/%Y') if material.date else '-' }}</td> -->
-                        <td>{{ material["date"]|default('-') }}</td>
+                        <td>{{ material.date.strftime('%d/%m/%Y') if material.date else '-' }}</td>
+                        
                         <td>{{ material.quantity }} {{ material.unit or '' }}</td>
                         <td>₹{{ "{:,.2f}".format(material.price or 0) }}</td>
                         <td>₹{{ "{:,.2f}".format((material.amount) if material.quantity and material.price else 0) }}</td>
