--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,11 +27,11 @@
                 <a href="{{ url_for('tasks.dashboard') }}" 
                    {% if request.endpoint == 'tasks.dashboard' %}class="active"{% endif %}>Dashboard</a>
 
-                <a href="{{ url_for('tasks.all_client') }}" 
-                   {% if request.endpoint == 'tasks.all_client' %}class="active"{% endif %}>Clients</a>
+                <a href="{{ url_for('tasks.all_clients') }}" 
+                   {% if request.endpoint == 'tasks.all_clients' %}class="active"{% endif %}>Clients</a>
 
-                <a href="{{ url_for('tasks.all_worker') }}" 
-                   {% if request.endpoint == 'tasks.all_worker' %}class="active"{% endif %}>Workers</a>
+                <a href="{{ url_for('tasks.all_workers') }}" 
+                   {% if request.endpoint == 'tasks.all_workers' %}class="active"{% endif %}>Workers</a>
 
                 <a href="{{ url_for('tasks.raw_materials') }}" 
                    {% if request.endpoint == 'tasks.raw_materials' %}class="active"{% endif %}>Materials</a>
